[package]
name = "google-doc2"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chromiumoxide = "0.5.7"
hex = { version = "0.4.3", optional = true }

[dev-dependencies]
dialoguer = "0.11.0"
rand = "0.8.5"
indicatif = "0.17.8"

[features]
default = ["shell"]
shell = ["dep:hex"]
